--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+// Firebase/Fabric Crashlytics
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 29
@@ -23,6 +25,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    // Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    // Firebase Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -31,3 +38,5 @@ dependencies {
 
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
