Test, CI: Disable Crashlytics for CI builds (Env Var: "NO_CRASHLYTICS"="true") and use a mock/anonymous google-services.json file to pass the build phase.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            // Check for "NO_CRASHLYTICS" Env Var
+            // Useful for Continuous Integration builds, e.g., when "google-services.json"
+            // not avaiable (not in repo).
+            boolean disableCrashlytics = "true".equalsIgnoreCase("$System.env.NO_CRASHLYTICS")
+            ext.enableCrashlytics = !disableCrashlytics
+        }
+        debug {
+            ext.enableCrashlytics = false
         }
     }
 }
