--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,12 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
+before_script:
+  # Crashlytics fix - Json file not in repo (privacy), but Crashlytics fails otherwise
+  # Instead, copy a mock version of the file. Gradle builds should disable the Crashlytics
+  # collection/reporting too, but without this it fails to build.
+  - cp ./mock/google-services.json ./app/google-services.json
+
 script:
     # Build and Unit tests
     - ./gradlew build
