--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
     dependencies {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        // Firebase
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        // Google Services plugin (for Firebase)
         classpath 'com.google.gms:google-services:4.3.3'
         // Firebase/Fabric Crashlytics
         classpath 'io.fabric.tools:gradle:1.31.2'
