--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
     }
     dependencies {
         // NOTE: Do not place your application dependencies here; they belong
@@ -15,8 +12,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.1'
         // Google Services plugin (for Firebase)
         classpath 'com.google.gms:google-services:4.3.3'
-        // Firebase/Fabric Crashlytics
-        classpath 'io.fabric.tools:gradle:1.31.2'
+        // Crashlytics Gradle plugin.
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.1'
     }
 }
 
